Version 1.3.14+svn:
 * language and i18n:
   * updated translations: Chinese, Danish, Dutch, French, Italian, Lithuanian,
     Spanish
 * multiplayer:
   * fixed bug #10777: Cannot cancel a multiplayer password prompt
   * fixed bug #10779: Rejoining game causes major problems
   * Fixed :control command to work
   * damage statistics for the current turn also works for observers now
 * miscellaneous and bug fixes:
   * Fixed boost test compile with 1.34.1
   * Make wesnoth work properly again if the datadir contains ../
   * Fixed some type of addon not being uninstallable (bug #10788)
   * some filtering was added to the [animate_unit] action to actually make it
     usefull

Version 1.3.14:
 * campaigns:
   * The Hammer of Thursagan:
     * 'Invaders' if there weren't enough free tiles to spawn all indigs the 
       game would enter an infinite loop (bug #10621)
   * Two Brothers:
     * updated the music playlists in all scenarios to include the new music
   * Under the Burning Suns:
     * Completely new scenario 3
     * Few bugfixes to scenario 6
 * graphics:
   * overlays are properly drawn at the top row (eg forrest) (bug #10238)
   * mountains no longer have a hill as base
   * when a leader dies the villages, which are no longer are owned, are
     properly redrawn (bug #9136)
   * sometimes the first hitpoints left percentage and the unscatched had a 
     difference of 0.1%, this has been fixed (bug #9122)
 * language and i18n:
   * updated translations: Chinese, Danish, Dutch, Finnish, French, German,
     Italian, Lithuanian, Slovak, Spanish
   * added gkai00mp.ttf font (needed for the Chinese translation)
 * multiplayer:
   * revised maps: Den of Onis, Weldyn Channel
   * renaming a unit no longer generates an OOS error (bug #7864)
   * if in a MP campaign the endlevel was continue(_no_save) it could happen
     that the client left before the host uploaded the new scenarion, this 
     has been fixed