@@ -7,6 +7,8 @@ Version 1.3.14+svn:
    * fixed bug #10779: Rejoining game causes major problems
    * Fixed :control command to work
    * damage statistics for the current turn also works for observers now
+ * user interface:
+   * Made ESC clear hotkey when changing hotkeys
  * miscellaneous and bug fixes:
    * Fixed boost test compile with 1.34.1
    * Make wesnoth work properly again if the datadir contains ../
